--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.custom-margin{
+  margin: 80px 0;
+}
